fix: fix issue with vertical scrollbar

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
 	margin: 0;
 	padding: 0;
 	min-height: 100vh;
+	width: 100vw;
+	overflow-x: hidden;
 }
 
 html {
